--- a/contract/Anchor.toml
+++ b/contract/Anchor.toml
@@ -6,7 +6,7 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-contract = "3z5DJ8k16cB8oAtbS45ye4PdtFQZBrFjNKhqks2AAxxr"
+company_pool = "3z5DJ8k16cB8oAtbS45ye4PdtFQZBrFjNKhqks2AAxxr"
 
 [registry]
 url = "https://api.apr.dev"
@@ -17,3 +17,9 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[workspace]
+members = [
+  "programs/contract"
+]
+
